# map_reduce

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  deployment.yaml  run_workload.nu  startWorkers.ps1  startWorkers.sh  startWorkers.zsh  start_workers.nu  workers_urls
map_reduce/: Cargo.toml
map_reduce/proto/: map_reduce.proto
map_reduce/src/: main.rs  map_reduce_utils.rs  worker_service.rs
proto/: hello_world.proto  map_reduce.proto
src/: main.rs  map_reduce_utils.rs  master_service.rs  worker-service-idea.rs  worker_service.rs
